--- a/EvanMeyerCS20HW1.html
+++ b/EvanMeyerCS20HW1.html
@@ -9,6 +9,6 @@
 <p>I grew up in Boston</p>
 <p>Something true about me that no one would expect is that I'm very socially perceptive</p>
 <p>The image below is of a thought bubble, indicating that my favorite place is in the mind, since I space out a lot ...</p>
-<img src="/Users/ecmeyer/Desktop/CS20HW1Pic.png">
+<img src="CS20HW1Pic.png">
 </body>
 </html>
